# kumulus-api

./: .gitignore  .repoignore  Dockerfile  README.md  app.py  dir_tree.txt  docker-compose.yml  files.txt  pyproject.toml  render.yaml  requirements.txt  tree.doc
app/: dashboard.py  main.py  models.py
mlartifacts/932246325839095504/34f4dc79251c42d2a31b45a9114366a9/artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
scripts/: 00_acquire_aoi.py  01_fetch_data.py  02_prepare_geodata.py  03_create_patches.py  03_generate_training_data_auto.py  04_generate_demo_assets.py  04_split_dataset.py  05_clean_annotations.py  05_create_smoke_test_set.py  06_refine_labels.py  backup_db.sh  train_deeplab.py  train_model.py
src/: dataset.py  train.py  visualization.py
src/kumulus_consultant/: db.py  logic.py  main.py  rag_system.py  tools.py
src/kumulus_consultant/config/: settings.py
tests/: test_tools.py
