[project]
name = "kumulus-consultant"
version = "1.0.0"
description = "An AI-powered agentic consultant for urban geospatial analysis."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "typer[rich] (>=0.16.0,<0.17.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "ollama (>=0.5.1,<0.6.0)",
    "langchain-google-genai (>=2.1.9,<3.0.0)",
    "sentinelhub (>=3.11.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.14.1"
ruff = "^0.12.7"

