[tool.poetry]
name = "kumulus-consultant"
version = "1.0.0"
description = "An AI-powered agentic consultant for urban geospatial analysis."
authors = ["Raziq <zrzq30@gmail.com>"]
readme = "README.md"
packages = [{include = "kumulus_consultant", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"

# Core AI & Agent Framework
langchain = ">=0.1.0,<0.2.0"
langchain-openai = ">=0.1.0,<0.2.0"
langchain-google-genai = ">=1.0.0,<2.0.0"
langchain-community = ">=0.0.30,<0.1.0"
ollama = ">=0.2.0,<0.3.0"
typer = {extras = ["rich"], version = ">=0.9.0,<0.10.0"}

# Geospatial & ML Stack
geopandas = ">=0.14.0,<0.15.0"
rasterio = ">=1.3.9,<1.4.0"
sentinelhub = ">=3.9.0,<4.0.0"
osmnx = ">=1.9.1,<2.0.0"
torch = ">=2.1.0,<3.0.0"
torchvision = ">=0.16.0,<0.17.0"
segmentation-models-pytorch = ">=0.3.3,<0.4.0"
albumentations = ">=1.4.0,<2.0.0"

# RAG System
faiss-cpu = ">=1.8.0,<1.9.0"
sentence-transformers = ">=2.2.2,<2.3.0"
rank-bm25 = ">=0.2.2,<0.3.0"
huggingface-hub = "<0.20.0"

# Configuration & Utilities
pydantic = ">=1.10.0,<2.0.0"
structlog = ">=24.0.0,<25.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
mlflow = ">=2.9.0,<3.0.0"
scikit-learn = ">=1.3.0,<2.0.0" # Added for metrics

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"